tests/fixtures/invalid/list_lt_bytes.py
# Cannot compare with < List[int] and Bytes
x: bool = [1, 2, 3] < b"hello"
